--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -24,14 +24,14 @@
         <array key="SanFranciscoDisplayBold.ttf">
             <string>.HelveticaNeueDeskInterface-Bold</string>
         </array>
-        <array key="SanFranciscoDisplayMedium.ttf">
-            <string>.HelveticaNeueDeskInterface-MediumP4</string>
-        </array>
         <array key="SanFranciscoDisplayThin.ttf">
             <string>.HelveticaNeueDeskInterface-Thin</string>
         </array>
         <array key="SanFranciscoTextHeavy.ttf">
             <string>.HelveticaNeueDeskInterface-Heavy</string>
+        </array>
+        <array key="SanFranciscoTextMedium.ttf">
+            <string>.HelveticaNeueDeskInterface-MediumP4</string>
         </array>
         <array key="SanFranciscoTextRegular.ttf">
             <string>.HelveticaNeueDeskInterface-Regular</string>
@@ -158,25 +158,6 @@
                                     <constraint firstAttribute="height" constant="42" id="pCo-fG-7IH"/>
                                 </constraints>
                             </view>
-                            <view opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wo1-MV-qZj" customClass="InstagramActivityIndicator" customModule="Unify" customModuleProvider="target">
-                                <rect key="frame" x="97" y="243" width="180" height="180"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <gestureRecognizers/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="LwR-hK-3f7"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="numSegments">
-                                        <integer key="value" value="20"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="strokeColor">
-                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="lineWidth">
-                                        <real key="value" value="7"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
@@ -196,15 +177,12 @@
                             <constraint firstAttribute="trailingMargin" secondItem="6Vr-dy-8eS" secondAttribute="trailing" constant="51.5" id="er7-yx-iUG"/>
                             <constraint firstItem="EMg-Tu-vyu" firstAttribute="top" secondItem="BaJ-jM-Sm5" secondAttribute="top" id="g5E-4j-MI9"/>
                             <constraint firstItem="VwB-Kw-Hwf" firstAttribute="leading" secondItem="BaJ-jM-Sm5" secondAttribute="leadingMargin" constant="-16" id="hoU-Mc-HMQ"/>
-                            <constraint firstItem="wo1-MV-qZj" firstAttribute="centerY" secondItem="BaJ-jM-Sm5" secondAttribute="centerY" id="jsa-yr-Q85"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eNd-0r-7Yk" secondAttribute="trailing" constant="-16" id="m5V-MW-3R2"/>
                             <constraint firstItem="qh6-AO-0EL" firstAttribute="leading" secondItem="dS3-C2-ywo" secondAttribute="leading" constant="5.5" id="vAl-NZ-uoj"/>
-                            <constraint firstItem="wo1-MV-qZj" firstAttribute="centerX" secondItem="BaJ-jM-Sm5" secondAttribute="centerX" id="vkw-gh-yms"/>
                             <constraint firstItem="pOP-H2-SSU" firstAttribute="top" secondItem="kLP-Jy-2da" secondAttribute="bottom" constant="115" id="xUY-s0-U8w"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="indicator" destination="wo1-MV-qZj" id="Geq-SU-3bt"/>
                         <outlet property="modalFadeBox" destination="EMg-Tu-vyu" id="Yf3-jU-XP9"/>
                         <outlet property="phoneNumberDisplay" destination="qh6-AO-0EL" id="jLq-eZ-Q2X"/>
                         <outlet property="pinCodeArea" destination="6Vr-dy-8eS" id="Lul-OE-2OS"/>
@@ -241,7 +219,7 @@
                                                 <rect key="frame" x="0.0" y="8" width="375" height="304"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Your First Card" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WpY-ws-9EB">
-                                                        <rect key="frame" x="98" y="38" width="180" height="20"/>
+                                                        <rect key="frame" x="97.5" y="38" width="180" height="20"/>
                                                         <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Bold" family="San Francisco Display" pointSize="17"/>
                                                         <color key="textColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -1154,11 +1132,28 @@
                                             <action selector="backButtonPressed:" destination="0r0-aF-rwB" eventType="touchUpInside" id="fYU-B8-6Kv"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ej5-NH-x7K">
+                                        <rect key="frame" x="298" y="26" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="rsL-mg-ReE"/>
+                                            <constraint firstAttribute="width" constant="60" id="vfx-m8-n8f"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="Done"/>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="mLC-1N-36h" eventType="touchUpInside" id="0Om-yW-RgD"/>
+                                            <action selector="backButtonPressed:" destination="N2C-XP-IWx" eventType="touchUpInside" id="NYs-K4-kQm"/>
+                                            <action selector="backButtonPressed:" destination="0r0-aF-rwB" eventType="touchUpInside" id="xWC-lm-7D4"/>
+                                            <action selector="doneButtonPressed:" destination="0r0-aF-rwB" eventType="touchUpInside" id="Dr7-4f-mRs"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="GME-f6-XaE"/>
                                     <constraint firstItem="C4A-ga-bLM" firstAttribute="leading" secondItem="tdX-og-lp8" secondAttribute="leading" constant="12" id="Hf1-eR-4bx"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ej5-NH-x7K" secondAttribute="trailing" constant="17" id="N5o-vt-AEC"/>
                                     <constraint firstAttribute="bottom" secondItem="C4A-ga-bLM" secondAttribute="bottom" constant="8" id="NRG-TY-eCu"/>
+                                    <constraint firstItem="Ej5-NH-x7K" firstAttribute="top" secondItem="tdX-og-lp8" secondAttribute="top" constant="26" id="Na0-uv-9yU"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -1178,6 +1173,11 @@
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="doneButton" destination="Ej5-NH-x7K" id="7V6-Qv-3Ph"/>
+                        <outlet property="profileImageView" destination="Fl8-5w-dIc" id="iIm-B3-T58"/>
+                        <outlet property="selectProfileImageButton" destination="8oM-nB-ukR" id="CR5-Vx-yB9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TsI-GI-O1Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2957,7 +2957,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Follow Up" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hUv-sN-bN5">
-                                        <rect key="frame" x="140.5" y="37" width="95" height="24"/>
+                                        <rect key="frame" x="140" y="37" width="95" height="24"/>
                                         <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Text" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
