--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -9268,60 +9268,6 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="365" height="245"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7cB-9A-Ffe">
-                                                            <rect key="frame" x="-2" y="9" width="369" height="221"/>
-                                                        </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rNw-ru-rvq">
-                                                            <rect key="frame" x="0.0" y="12" width="365" height="55"/>
-                                                            <subviews>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fv1-sg-LfM">
-                                                                    <rect key="frame" x="284" y="5" width="32" height="32"/>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" constant="32" id="jhN-4a-Kdf"/>
-                                                                        <constraint firstAttribute="height" constant="32" id="mrd-tp-0aH"/>
-                                                                    </constraints>
-                                                                    <state key="normal" image="icn-mail-blue"/>
-                                                                    <connections>
-                                                                        <action selector="showEmailCard:" destination="fLo-iJ-Uas" eventType="touchUpInside" id="2mB-dU-JKG"/>
-                                                                        <action selector="showSMSRecipient:" destination="ToP-Xd-t3l" eventType="touchUpInside" id="EJK-VN-SM8"/>
-                                                                    </connections>
-                                                                </button>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Qf-Ei-zmJ">
-                                                                    <rect key="frame" x="8" y="9" width="245" height="26"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="26" id="Bsh-jA-vdI"/>
-                                                                        <constraint firstAttribute="width" constant="245" id="MZu-Ku-xZA"/>
-                                                                    </constraints>
-                                                                    <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Display" pointSize="17"/>
-                                                                    <color key="textColor" red="0.015686274510000001" green="0.2901960784" blue="0.51764705879999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gKe-C5-Zp3">
-                                                                    <rect key="frame" x="324" y="5" width="32" height="32"/>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="32" id="ICh-Ay-nCX"/>
-                                                                        <constraint firstAttribute="width" constant="32" id="Mu4-Ub-Vw5"/>
-                                                                    </constraints>
-                                                                    <state key="normal" image="icn-chat-blue"/>
-                                                                    <connections>
-                                                                        <action selector="showSMSCard:" destination="fLo-iJ-Uas" eventType="touchUpInside" id="Huj-6Q-DEi"/>
-                                                                        <action selector="showSMSRecipient:" destination="ToP-Xd-t3l" eventType="touchUpInside" id="NVB-Ig-j7u"/>
-                                                                    </connections>
-                                                                </button>
-                                                            </subviews>
-                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="55" id="4x7-1T-S14"/>
-                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="leading" secondItem="fv1-sg-LfM" secondAttribute="trailing" constant="8" id="9SY-bC-0eW"/>
-                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="centerY" secondItem="fv1-sg-LfM" secondAttribute="centerY" constant="1" id="CK2-xR-RnC"/>
-                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="trailing" secondItem="rNw-ru-rvq" secondAttribute="trailingMargin" constant="-1" id="SwW-kK-6f3"/>
-                                                                <constraint firstItem="fv1-sg-LfM" firstAttribute="baseline" secondItem="gKe-C5-Zp3" secondAttribute="baseline" id="h7x-6E-Cc1"/>
-                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="leading" secondItem="rNw-ru-rvq" secondAttribute="leadingMargin" id="nIr-bW-6lS"/>
-                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="top" secondItem="rNw-ru-rvq" secondAttribute="top" constant="9" id="zQY-Vk-UOf"/>
-                                                            </constraints>
-                                                        </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRo-Nn-t0e">
                                                             <rect key="frame" x="0.0" y="49" width="365" height="178"/>
                                                             <subviews>
@@ -9470,16 +9416,70 @@
                                                                 <constraint firstItem="h4Z-9X-AgJ" firstAttribute="leading" secondItem="YRo-Nn-t0e" secondAttribute="leading" constant="15" id="vqi-Cb-RMM"/>
                                                             </constraints>
                                                         </view>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7cB-9A-Ffe">
+                                                            <rect key="frame" x="0.0" y="9" width="365" height="221"/>
+                                                        </view>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rNw-ru-rvq">
+                                                            <rect key="frame" x="0.0" y="12" width="365" height="55"/>
+                                                            <subviews>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fv1-sg-LfM">
+                                                                    <rect key="frame" x="284" y="5" width="32" height="32"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="32" id="jhN-4a-Kdf"/>
+                                                                        <constraint firstAttribute="height" constant="32" id="mrd-tp-0aH"/>
+                                                                    </constraints>
+                                                                    <state key="normal" image="icn-mail-blue"/>
+                                                                    <connections>
+                                                                        <action selector="showEmailCard:" destination="fLo-iJ-Uas" eventType="touchUpInside" id="2mB-dU-JKG"/>
+                                                                        <action selector="showSMSRecipient:" destination="ToP-Xd-t3l" eventType="touchUpInside" id="EJK-VN-SM8"/>
+                                                                    </connections>
+                                                                </button>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Qf-Ei-zmJ">
+                                                                    <rect key="frame" x="8" y="9" width="245" height="26"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="26" id="Bsh-jA-vdI"/>
+                                                                        <constraint firstAttribute="width" constant="245" id="MZu-Ku-xZA"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Display" pointSize="17"/>
+                                                                    <color key="textColor" red="0.015686274510000001" green="0.2901960784" blue="0.51764705879999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gKe-C5-Zp3">
+                                                                    <rect key="frame" x="324" y="5" width="32" height="32"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="32" id="ICh-Ay-nCX"/>
+                                                                        <constraint firstAttribute="width" constant="32" id="Mu4-Ub-Vw5"/>
+                                                                    </constraints>
+                                                                    <state key="normal" image="icn-chat-blue"/>
+                                                                    <connections>
+                                                                        <action selector="showSMSCard:" destination="fLo-iJ-Uas" eventType="touchUpInside" id="Huj-6Q-DEi"/>
+                                                                        <action selector="showSMSRecipient:" destination="ToP-Xd-t3l" eventType="touchUpInside" id="NVB-Ig-j7u"/>
+                                                                    </connections>
+                                                                </button>
+                                                            </subviews>
+                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="55" id="4x7-1T-S14"/>
+                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="leading" secondItem="fv1-sg-LfM" secondAttribute="trailing" constant="8" id="9SY-bC-0eW"/>
+                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="centerY" secondItem="fv1-sg-LfM" secondAttribute="centerY" constant="1" id="CK2-xR-RnC"/>
+                                                                <constraint firstItem="gKe-C5-Zp3" firstAttribute="trailing" secondItem="rNw-ru-rvq" secondAttribute="trailingMargin" constant="-1" id="SwW-kK-6f3"/>
+                                                                <constraint firstItem="fv1-sg-LfM" firstAttribute="baseline" secondItem="gKe-C5-Zp3" secondAttribute="baseline" id="h7x-6E-Cc1"/>
+                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="leading" secondItem="rNw-ru-rvq" secondAttribute="leadingMargin" id="nIr-bW-6lS"/>
+                                                                <constraint firstItem="6Qf-Ei-zmJ" firstAttribute="top" secondItem="rNw-ru-rvq" secondAttribute="top" constant="9" id="zQY-Vk-UOf"/>
+                                                            </constraints>
+                                                        </view>
                                                     </subviews>
                                                 </view>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailingMargin" secondItem="YRo-Nn-t0e" secondAttribute="trailing" constant="-8" id="2vA-mS-rSc"/>
                                                     <constraint firstItem="rNw-ru-rvq" firstAttribute="trailing" secondItem="YRo-Nn-t0e" secondAttribute="trailing" id="8fw-D1-Rie"/>
-                                                    <constraint firstItem="7cB-9A-Ffe" firstAttribute="trailing" secondItem="YRo-Nn-t0e" secondAttribute="trailing" constant="2" id="IEh-md-a8j"/>
+                                                    <constraint firstItem="7cB-9A-Ffe" firstAttribute="trailing" secondItem="YRo-Nn-t0e" secondAttribute="trailing" id="IEh-md-a8j"/>
                                                     <constraint firstItem="rNw-ru-rvq" firstAttribute="top" secondItem="fLo-iJ-Uas" secondAttribute="topMargin" constant="4" id="O4j-ty-hpd"/>
                                                     <constraint firstItem="YRo-Nn-t0e" firstAttribute="leading" secondItem="fLo-iJ-Uas" secondAttribute="leadingMargin" constant="-8" id="TW5-uK-OY3"/>
-                                                    <constraint firstItem="7cB-9A-Ffe" firstAttribute="leading" secondItem="YRo-Nn-t0e" secondAttribute="leading" constant="-2" id="evP-29-88Y"/>
+                                                    <constraint firstItem="7cB-9A-Ffe" firstAttribute="leading" secondItem="YRo-Nn-t0e" secondAttribute="leading" id="evP-29-88Y"/>
                                                     <constraint firstItem="rNw-ru-rvq" firstAttribute="leading" secondItem="YRo-Nn-t0e" secondAttribute="leading" id="gnM-8G-FYv"/>
                                                     <constraint firstItem="YRo-Nn-t0e" firstAttribute="top" secondItem="fLo-iJ-Uas" secondAttribute="topMargin" constant="41" id="iS4-tC-Lzj"/>
                                                     <constraint firstItem="7cB-9A-Ffe" firstAttribute="top" secondItem="rNw-ru-rvq" secondAttribute="top" constant="-3" id="mHC-VW-GZs"/>
